fix link dialogs not showing (#220)
* fix bug with inline code

* fix test suite

* fix test suite

* prettier

--- a/docs/src/rhino-editor/exports/styles/trix.css
+++ b/docs/src/rhino-editor/exports/styles/trix.css
@@ -151,7 +151,7 @@
 .trix-content li {
   margin-inline-start: 1em;
 }
-.trix-content :where(:not(pre code)) code {
+.trix-content :not(pre) code {
   background-color: #eee;
   border-radius: 2px;
   padding: 2px;
